[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/bosses/proxima-centauri_boss.png" type="Texture" id=1]
[ext_resource path="res://Assets/Proxima Centauri.gd" type="Script" id=2]
[ext_resource path="res://res/bosses/boss health bars/jupiter/jupiter.health.100%.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 96.1301

[node name="Jupiter" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 345, -283 )
scale = Vector2( 3, 3 )
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 344, -277 )
scale = Vector2( 3.01, 2.77 )
shape = SubResource( 1 )

[node name="DamageIdentifier" type="ColorRect" parent="."]
margin_left = 61.0
margin_top = -554.0
margin_right = 634.0
margin_bottom = -2.0
color = Color( 1, 0, 0, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 344, -281 )
scale = Vector2( 3, 2.8 )
shape = SubResource( 1 )

[node name="LifeBar" type="Sprite" parent="."]
position = Vector2( 356, 620 )
z_index = 1
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
